# obws-commands

./: .gitignore  README.md  config.toml.sample  pyproject.toml  requirements.txt
obwsc/: log.py  options.py
obwsc/cli/: __init__.py  obws_command.py
obwsc/commands/: event_based_command.py  pause_record.py  resume_record.py  set_current_profile.py  set_current_scene_collection.py  start_record.py  stop_record.py  switch_profile_and_scene_collection.py
